--- a/.github/workflows/archives-with-submodules.yml
+++ b/.github/workflows/archives-with-submodules.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install git-archive-all
+          sudo apt-get update
+          sudo apt-get install -y hub
       - name: Create the ZIP archive
         run: |
           git-archive-all "${{needs.set-vars.outputs.archive_path}}"
